--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: "Georgia", serif;
-  background: linear-gradient(to bottom, #23063d, #a780f1);
+  background: linear-gradient(to bottom, #23063d, #a882ee);
   color: #e6d9ff;
   min-height: 100vh;
   display: flex;
